--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Brooklyn Ridley's Portfolio</h1>
     <hr/>
-    <h2>Junior Emthusiast Web Developer</h2>
+    <h2>Junior Enthusiast Web Developer</h2>
     <h2>Projects</h2>
     <a href="Movies.html">Movie Ranking Project</a>
     <br/>
